--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(85, 79, 79);
+    color:#333;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -15,6 +15,25 @@ body{
     margin: 0 auto;
 }
 
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container h1{
     font-size: 20px;
+}
+
+#cabecera{
+    background:#33A;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,,0.5);
+}
+
+#post{
+    padding: 1em;
 }
